remove unneeded keys in behavioral json

--- a/example.ipynb
+++ b/example.ipynb
@@ -548,7 +548,7 @@
    "outputs": [],
    "source": [
     "tb_dynamic = TaxBrain(2019, 2028, use_cps=True, reform=reform_url,\n",
-    "                      behavior={2019: {\"BE_sub\": 0.25}})\n",
+    "                      behavior={\"sub\": 0.25})\n",
     "tb_dynamic.run()"
    ]
   },
