run notebook with corp incidence

--- a/docs/book/content/examples/example.ipynb
+++ b/docs/book/content/examples/example.ipynb
@@ -1323,13 +1323,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Partial Equilibrium - Combined Tax Liability\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "      <th>2023</th>\n",
+       "      <th>2024</th>\n",
+       "      <th>2025</th>\n",
+       "      <th>2026</th>\n",
+       "      <th>2027</th>\n",
+       "      <th>2028</th>\n",
+       "      <th>2029</th>\n",
+       "      <th>2030</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Base</th>\n",
+       "      <td>2.271315e+12</td>\n",
+       "      <td>3.067829e+12</td>\n",
+       "      <td>3.246660e+12</td>\n",
+       "      <td>3.395741e+12</td>\n",
+       "      <td>3.575933e+12</td>\n",
+       "      <td>3.979720e+12</td>\n",
+       "      <td>4.161644e+12</td>\n",
+       "      <td>4.344157e+12</td>\n",
+       "      <td>4.543405e+12</td>\n",
+       "      <td>4.749710e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reform</th>\n",
+       "      <td>2.311004e+12</td>\n",
+       "      <td>3.121100e+12</td>\n",
+       "      <td>3.313873e+12</td>\n",
+       "      <td>3.478419e+12</td>\n",
+       "      <td>3.675133e+12</td>\n",
+       "      <td>4.084667e+12</td>\n",
+       "      <td>4.284068e+12</td>\n",
+       "      <td>4.484878e+12</td>\n",
+       "      <td>4.692227e+12</td>\n",
+       "      <td>4.906319e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Difference</th>\n",
+       "      <td>3.968873e+10</td>\n",
+       "      <td>5.327112e+10</td>\n",
+       "      <td>6.721343e+10</td>\n",
+       "      <td>8.267846e+10</td>\n",
+       "      <td>9.920007e+10</td>\n",
+       "      <td>1.049468e+11</td>\n",
+       "      <td>1.224242e+11</td>\n",
+       "      <td>1.407211e+11</td>\n",
+       "      <td>1.488219e+11</td>\n",
+       "      <td>1.566086e+11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    2021          2022          2023          2024  \\\n",
+       "Base        2.271315e+12  3.067829e+12  3.246660e+12  3.395741e+12   \n",
+       "Reform      2.311004e+12  3.121100e+12  3.313873e+12  3.478419e+12   \n",
+       "Difference  3.968873e+10  5.327112e+10  6.721343e+10  8.267846e+10   \n",
+       "\n",
+       "                    2025          2026          2027          2028  \\\n",
+       "Base        3.575933e+12  3.979720e+12  4.161644e+12  4.344157e+12   \n",
+       "Reform      3.675133e+12  4.084667e+12  4.284068e+12  4.484878e+12   \n",
+       "Difference  9.920007e+10  1.049468e+11  1.224242e+11  1.407211e+11   \n",
+       "\n",
+       "                    2029          2030  \n",
+       "Base        4.543405e+12  4.749710e+12  \n",
+       "Reform      4.692227e+12  4.906319e+12  \n",
+       "Difference  1.488219e+11  1.566086e+11  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Partial Equilibrium - Combined Tax Liability\")\n",
     "tb_dynamic.weighted_totals(\"combined\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
