make sure pandas latest

--- a/docs/book/content/examples/example.ipynb
+++ b/docs/book/content/examples/example.ipynb
@@ -9,7 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Install conda, taxbrain, and taxcalc if in Google Colab.\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules and 'taxbrain' not in sys.modules:\n",
+    "    # Install taxbrain and dependencies\n",
+    "    !pip install taxbrain &> /dev/null\n",
+    "    !pip install taxcalc &> /dev/null\n",
+    "    !pip install pypandoc &> /dev/null\n",
+    "    !pip install -U pandas &> /dev/null  # make sure pandas is up to date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +177,7 @@
        "Difference  2.010544e+11  2.118730e+11  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +542,7 @@
        "Top 1%                  0.0       -4.338110  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +730,7 @@
        "Difference  1.471100e+11  1.548863e+11  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1287,7 @@
        "[16 rows x 24 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,21 +1326,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "TaxBrain.__init__() got an unexpected keyword argument 'use_cps'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tb_dynamic \u001b[38;5;241m=\u001b[39m \u001b[43mTaxBrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_year\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_year\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_cps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreform_url\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mbehavior\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msub\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.25\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mcorp_revenue\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcorp_rev\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mcorp_incidence_assumptions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mincidence_assumptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m tb_dynamic\u001b[38;5;241m.\u001b[39mrun()\n",
-      "\u001b[0;31mTypeError\u001b[0m: TaxBrain.__init__() got an unexpected keyword argument 'use_cps'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tb_dynamic = TaxBrain(start_year, end_year, microdata=\"CPS\", reform=reform_url,\n",
     "                      behavior={\"sub\": 0.25},\n",
@@ -1335,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1381,42 +1385,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Base</th>\n",
-       "      <td>2.271315e+12</td>\n",
-       "      <td>3.067829e+12</td>\n",
-       "      <td>3.246660e+12</td>\n",
-       "      <td>3.395741e+12</td>\n",
-       "      <td>3.575933e+12</td>\n",
-       "      <td>3.979720e+12</td>\n",
-       "      <td>4.161644e+12</td>\n",
-       "      <td>4.344157e+12</td>\n",
-       "      <td>4.543405e+12</td>\n",
-       "      <td>4.749710e+12</td>\n",
+       "      <td>2.269727e+12</td>\n",
+       "      <td>3.067767e+12</td>\n",
+       "      <td>3.246623e+12</td>\n",
+       "      <td>3.395728e+12</td>\n",
+       "      <td>3.575938e+12</td>\n",
+       "      <td>3.979716e+12</td>\n",
+       "      <td>4.161639e+12</td>\n",
+       "      <td>4.344151e+12</td>\n",
+       "      <td>4.543397e+12</td>\n",
+       "      <td>4.749701e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Reform</th>\n",
-       "      <td>2.311004e+12</td>\n",
-       "      <td>3.121100e+12</td>\n",
-       "      <td>3.313873e+12</td>\n",
-       "      <td>3.478419e+12</td>\n",
-       "      <td>3.675133e+12</td>\n",
-       "      <td>4.084667e+12</td>\n",
-       "      <td>4.284068e+12</td>\n",
-       "      <td>4.484878e+12</td>\n",
-       "      <td>4.692227e+12</td>\n",
-       "      <td>4.906319e+12</td>\n",
+       "      <td>2.309448e+12</td>\n",
+       "      <td>3.121009e+12</td>\n",
+       "      <td>3.313788e+12</td>\n",
+       "      <td>3.478349e+12</td>\n",
+       "      <td>3.675071e+12</td>\n",
+       "      <td>4.084663e+12</td>\n",
+       "      <td>4.284063e+12</td>\n",
+       "      <td>4.484873e+12</td>\n",
+       "      <td>4.692225e+12</td>\n",
+       "      <td>4.906309e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Difference</th>\n",
-       "      <td>3.968873e+10</td>\n",
-       "      <td>5.327112e+10</td>\n",
-       "      <td>6.721343e+10</td>\n",
-       "      <td>8.267846e+10</td>\n",
-       "      <td>9.920007e+10</td>\n",
+       "      <td>3.972134e+10</td>\n",
+       "      <td>5.324191e+10</td>\n",
+       "      <td>6.716455e+10</td>\n",
+       "      <td>8.262134e+10</td>\n",
+       "      <td>9.913307e+10</td>\n",
        "      <td>1.049468e+11</td>\n",
-       "      <td>1.224242e+11</td>\n",
-       "      <td>1.407211e+11</td>\n",
-       "      <td>1.488219e+11</td>\n",
-       "      <td>1.566086e+11</td>\n",
+       "      <td>1.224239e+11</td>\n",
+       "      <td>1.407223e+11</td>\n",
+       "      <td>1.488282e+11</td>\n",
+       "      <td>1.566081e+11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1424,22 +1428,22 @@
       ],
       "text/plain": [
        "                    2021          2022          2023          2024  \\\n",
-       "Base        2.271315e+12  3.067829e+12  3.246660e+12  3.395741e+12   \n",
-       "Reform      2.311004e+12  3.121100e+12  3.313873e+12  3.478419e+12   \n",
-       "Difference  3.968873e+10  5.327112e+10  6.721343e+10  8.267846e+10   \n",
+       "Base        2.269727e+12  3.067767e+12  3.246623e+12  3.395728e+12   \n",
+       "Reform      2.309448e+12  3.121009e+12  3.313788e+12  3.478349e+12   \n",
+       "Difference  3.972134e+10  5.324191e+10  6.716455e+10  8.262134e+10   \n",
        "\n",
        "                    2025          2026          2027          2028  \\\n",
-       "Base        3.575933e+12  3.979720e+12  4.161644e+12  4.344157e+12   \n",
-       "Reform      3.675133e+12  4.084667e+12  4.284068e+12  4.484878e+12   \n",
-       "Difference  9.920007e+10  1.049468e+11  1.224242e+11  1.407211e+11   \n",
+       "Base        3.575938e+12  3.979716e+12  4.161639e+12  4.344151e+12   \n",
+       "Reform      3.675071e+12  4.084663e+12  4.284063e+12  4.484873e+12   \n",
+       "Difference  9.913307e+10  1.049468e+11  1.224239e+11  1.407223e+11   \n",
        "\n",
        "                    2029          2030  \n",
-       "Base        4.543405e+12  4.749710e+12  \n",
-       "Reform      4.692227e+12  4.906319e+12  \n",
-       "Difference  1.488219e+11  1.566086e+11  "
+       "Base        4.543397e+12  4.749701e+12  \n",
+       "Reform      4.692225e+12  4.906309e+12  \n",
+       "Difference  1.488282e+11  1.566081e+11  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
